style the ones for now

--- a/src/App.css
+++ b/src/App.css
@@ -36,4 +36,5 @@ body{
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(30rem, 1fr));
   justify-items: center;
+  row-gap: 2rem;
 }
