--- a/src/App.css
+++ b/src/App.css
@@ -38,3 +38,22 @@ body{
   justify-items: center;
   row-gap: 2rem;
 }
+
+.container-full{
+  position: relative;
+}
+
+.clicked-item__active{
+  position: absolute;
+  top: 0;
+  right: 0;
+  width: 100%;
+  height: 100%;
+  background-color: #66666666;
+  z-index: 10000;
+
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
