--- a/src/App.css
+++ b/src/App.css
@@ -58,9 +58,22 @@ body{
   align-items: center;
 }
 
+.clicked-item__active div{
+  height: 90vh;
+  transform: translateY(-100px);
+}
+
+.clicked-item__active div img{
+  width: 100%;
+  height: 100%;
+  display: block;
+  object-fit: cover;
+}
+
 .nav{
   display: flex;
   justify-content: space-around;
+  align-items: center;
   padding: 3rem;
 }
 
