--- a/src/App.css
+++ b/src/App.css
@@ -1,49 +1,54 @@
-*, *::after, *::before{
+*,
+*::after,
+*::before {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
 }
 
-html{
+html {
   font-size: 62.5%;
 }
 
-body{
+body {
   font-size: 1.8rem;
   font-family: sans-serif;
 }
 
-
-.photo_box{
+.photo_box {
   width: 30rem;
   min-width: 30rem;
   max-width: 30rem;
   gap: 2rem;
+  background-color: antiquewhite;
+  padding: 5%;
+  border-radius: 5px;
 }
 
-.image_box{
+.image_box {
   height: 20rem;
 }
 
-.photo_box img{
+.photo_box img {
   width: 100%;
   height: 100%;
   display: block;
   object-fit: cover;
+  border-radius: 5px;
 }
 
-.images__container{
+.images__container {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(30rem, 1fr));
   justify-items: center;
   row-gap: 2rem;
 }
 
-.container-full{
+.container-full {
   position: relative;
 }
 
-.clicked-item__active{
+.clicked-item__active {
   position: absolute;
   top: 0;
   right: 0;
@@ -58,56 +63,106 @@ body{
   align-items: center;
 }
 
-.clicked-item__active div{
+.clicked-item__active div {
   height: 90vh;
   transform: translateY(-100px);
 }
 
-.clicked-item__active div img{
+.clicked-item__active div img {
   width: 100%;
   height: 100%;
   display: block;
   object-fit: cover;
 }
 
-.nav{
+.nav {
   display: flex;
   justify-content: space-around;
   align-items: center;
   padding: 3rem;
 }
 
-.param{
+.param {
   text-align: center;
   text-transform: uppercase;
 }
 
-.input{
+.input {
   padding: 2rem;
   width: 70%;
   border-radius: 100px;
   margin-right: 1rem;
   border: 2px solid #05a081;
-
 }
 
-.search-container{
+.search-container {
   width: 60%;
-
 }
-.search_button{
+.search_button {
   padding: 2rem;
   background-color: #05a081;
   color: white;
   font-weight: bold;
   text-transform: uppercase;
-  border:none;
+  border: none;
   outline: none;
   border-radius: 100px;
 }
 
-.link{
+.link {
   text-decoration: none;
   color: #05a081;
   font-weight: bold;
+}
+
+.backdrop {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  z-index: 1;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.clicked-item {
+  position: relative;
+  width: 60%;
+}
+
+.image-container {
+  position: relative;
+  z-index: 2;
+}
+
+.image-card {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  padding: 3%;
+  background-color: #fff;
+  border-radius: 10px;
+}
+
+.image-container {
+  width: 100%;
+  height: 100%;
+  padding-bottom: 75%;
+  position: relative;
+  overflow: hidden;
+}
+
+.image-container img {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  border-radius: 10px;
+  margin-bottom: 2%;
 }
